--- a/assets/css/lookbooq.css
+++ b/assets/css/lookbooq.css
@@ -1,5 +1,4 @@
 .lookbooq{ position: relative; }
-.lookbooq .pointers{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 3; }
 
 .piqture{ position: relative; }
 .piqture .piqture-img{ position: relative; z-index: 1; max-width: 100%; height: auto; }
@@ -8,6 +7,7 @@
 .piqture .caption-content{  }
 .piqture .caption-content p:last-child{ margin-bottom: 0; }
 
+.piqture .pointers{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 3; }
 .piqture .pointer{ position: absolute; }
 .piqture .pointer-bullet{ background: #005271; border-radius: 50%; width: 40px; height: 40px; color: #fff; text-align: center; line-height: 40px; font-weight: bold; font-size: 18px; cursor: pointer; }
 
