--- a/assets/css/lookbooq.css
+++ b/assets/css/lookbooq.css
@@ -1,24 +1,156 @@
-.lookbooq{ position: relative; }
-.lookbooq .pointers{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 3; }
-
-.piqture{ position: relative; }
-.piqture .piqture-img{ position: relative; z-index: 1; max-width: 100%; height: auto; }
-.piqture .piqture-caption{ position: absolute; bottom: 0; z-index: 2; background: rgba(255,255,255,0.6); padding: 15px; }
-.piqture .caption-title{ margin-top: 0; }
-.piqture .caption-content{  }
-.piqture .caption-content p:last-child{ margin-bottom: 0; }
-
-.piqture .pointer{ position: absolute; }
-.piqture .pointer-bullet{ background: #005271; border-radius: 50%; width: 40px; height: 40px; color: #fff; text-align: center; line-height: 40px; font-weight: bold; font-size: 18px; cursor: pointer; }
-
-.piqture .tip{ position: absolute; left: -9999px; padding-top: 5px; }
-.piqture .tip-content{ padding: 10px; background: rgba(255,255,255,0.7); width: 300px; }
-.piqture .tip-arrow{ width: 0; height: 0; margin-left: 10px; }
-.piqture .tip-arrow.arrow-up { border-left: 10px solid transparent; border-right: 10px solid transparent; border-bottom: 10px solid rgba(255,255,255,0.7); }
-.piqture .tip-arrow.arrow-down { border-left: 20px solid transparent; border-right: 20px solid transparent; border-top: 20px solid rgba(255,255,255,0.7); }
-.piqture .tip-arrow.arrow-right { border-top: 60px solid transparent; border-bottom: 60px solid transparent; border-left: 60px solid rgba(255,255,255,0.7); }
-.piqture .tip-arrow.arrow-left { border-top: 10px solid transparent; border-bottom: 10px solid transparent;  border-right:10px solid rgba(255,255,255,0.7); }
-
-@media screen (min-width: 768px) {
-
+.lookbooq {
+  position: relative;
+}
+.piqture {
+  position: relative;
+}
+.piqture .piqture-img {
+  position: relative;
+  z-index: 1;
+  max-width: 100%;
+  height: auto;
+}
+.piqture .piqture-caption {
+  padding: 15px;
+}
+.piqture .caption-title {
+  margin-top: 0;
+}
+.piqture .caption-content p:last-child {
+  margin-bottom: 0;
+}
+.piqture .sqreen {
+  position: relative;
+}
+.piqture .pointers {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+.piqture .pointer {
+  position: absolute;
+}
+.piqture .pointer-bullet {
+  cursor: pointer;
+  background: #005271;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  text-align: center;
+  line-height: 30px;
+  font-weight: bold;
+  font-size: 15px;
+}
+.piqture .pointers-list {
+  padding: 15px 0;
+}
+.piqture .pointers-list ul {
+  margin: 0;
+  padding: 0;
+}
+.piqture .pointers-list ul,
+.piqture .pointers-list ul li {
+  list-style: none;
+}
+.piqture .pointers-list li:before,
+.piqture .pointers-list li:after {
+  content: " ";
+  display: table;
+}
+.piqture .pointers-list li:after {
+  clear: both;
+}
+.piqture .pointers-list .pointer-left {
+  float: left;
+  width: 10%;
+}
+.piqture .pointers-list .pointer-right {
+  float: right;
+  width: 90%;
+}
+.piqture .pointers-list .pointer-bullet {
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
+  font-size: 12px;
+}
+.piqture .pointers-list .pointer-title {
+  line-height: 20px;
+  margin-top: 0;
+}
+.piqture .tip {
+  display: none;
+  position: absolute;
+  left: -9999px;
+  padding-top: 5px;
+}
+.piqture .tip-content {
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.7);
+  width: 300px;
+}
+.piqture .tip-arrow {
+  width: 0;
+  height: 0;
+  margin-left: 10px;
+}
+.piqture .tip-arrow.arrow-up {
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid rgba(255, 255, 255, 0.7);
+}
+.piqture .tip-arrow.arrow-down {
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid rgba(255, 255, 255, 0.7);
+}
+.piqture .tip-arrow.arrow-right {
+  border-top: 60px solid transparent;
+  border-bottom: 60px solid transparent;
+  border-left: 60px solid rgba(255, 255, 255, 0.7);
+}
+.piqture .tip-arrow.arrow-left {
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 10px solid rgba(255, 255, 255, 0.7);
+}
+@media (min-width: 768px) {
+  .piqture .piqture-caption {
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.6);
+  }
+  .piqture .pointer-bullet {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
+  }
+  .piqture .tip {
+    display: block;
+  }
+}
+.show-mobile,
+.hide-desktop {
+  display: block;
+}
+.show-desktop,
+.hide-mobile {
+  display: none;
+}
+@media (min-width: 768px) {
+  .show-mobile,
+  .hide-desktop {
+    display: none;
+  }
+  .show-desktop,
+  .hide-mobile {
+    display: block;
+  }
 }
