--- a/lib/gizburdt/cuztom/src/assets/less/cuztom.less
+++ b/lib/gizburdt/cuztom/src/assets/less/cuztom.less
@@ -7,21 +7,19 @@
 	.cuztom-main-table{ border: 1px solid #dfdfdf !important; background-color: #f9f9f9; }
 	.cuztom-table{ 
 		&{ margin: 0; width: 100%; border-spacing: 0; }
-		tr{
-			&.cuztom-tabs,
-			&.cuztom-accordion{
-				& > th,
-				& > td{ border-top: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf; }
-			}
-			&.cuztom-bundle{
-				& > th,
-				& > td{ border: none; padding: 10px; }
-			}
-			&.cuztom-control{ 
-				& > td{ background: #f1f1f1; padding: 6px 10px; border: 1px solid #dfdfdf; }
-				&.cuztom-control-top > td{ border-bottom: none; }
-				&.cuztom-control-bottom > td{ border-top: none; }
-			}
+		tr.cuztom-tabs,
+		tr.cuztom-accordion{
+			& > th,
+			& > td{ border-top: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf; }
+		}
+		tr.cuztom-bundle{
+			& > th,
+			& > td{ border: none; padding: 10px; }
+		}
+		tr.cuztom-control{ 
+			& > td{ background: #f1f1f1; padding: 6px 10px; border: 1px solid #dfdfdf; }
+			&.cuztom-control-top > td{ border-bottom: none; }
+			&.cuztom-control-bottom > td{ border-top: none; }
 		}
 		td,
 		th{ position: relative; padding: 15px 10px; }
@@ -33,7 +31,7 @@
 	.cuztom-required{ color: red; }
 	.cuztom-field-description,
 	.cuztom-field-explanation{ font-size: 10px; font-style: italic; font-weight: normal; color: #999; }
-	.cuztom-field-explanation{ display: block; float: left; margin-top: 2px; }
+	.cuztom-field-explanation{ display: block; float: left; margin-top: 2px; width: 100%; }
 	.cuztom-input{ margin-right: 3px; display: inline-block; vertical-align: middle; }
 	.cuztom-input-text,
 	.cuztom-textarea{ width: 80% !important; min-height: 24px; }
@@ -54,7 +52,7 @@
 	// Accordion
 	.cuztom-accordion{ 
 		.ui-widget{ border: 1px solid #ddd; box-shadow: 0 1px 0 #fff; .border-radius(0) }
-		.ui-accordion-header{ color: #444; background: #f1f1f1; font-size: 12px !important; border: none; border-bottom: 1px solid #ddd; .box-shadow(none); .border-radius(0); cursor: move; }
+		.ui-accordion-header{ color: #444; background: #f1f1f1; font-size: 12px !important; border: none; border-bottom: 1px solid #ddd; .box-shadow(none); .border-radius(0); cursor: move; padding-left: 25px !important; }
 		.ui-accordion-content{ padding: 0; border-radius: 0; -webkit-border-radius: 0; border: none; }
 	}
 
