Call fancybox clean

--- a/assets/less/lookbooq.less
+++ b/assets/less/lookbooq.less
@@ -35,7 +35,7 @@
 @media (min-width: 768px) 
 {
 	.piqture{
-		.lookbooq-fancybox{ cursor: pointer; }
+		.lookbooq-fancybox{ cursor: pointer; display: block; position: relative; }
 		.piqture-caption{ position: absolute; bottom: 0; z-index: 2; padding: 15px; background: rgba(255,255,255,0.6); }
 		.pointer-bullet{ width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
 		.tip{ display: block; }
