--- a/assets/css/lookbooq.css
+++ b/assets/css/lookbooq.css
@@ -122,6 +122,8 @@
 @media (min-width: 768px) {
   .piqture .lookbooq-fancybox {
     cursor: pointer;
+    display: block;
+    position: relative;
   }
   .piqture .piqture-caption {
     position: absolute;
